--- a/frontend/community/技术开发笔记.md
+++ b/frontend/community/技术开发笔记.md
@@ -41,7 +41,7 @@
 
 红色为鼠标位置，绿色为当前图片位置。
 
-遇到的困难有：下列索引的颜色显示功能一开始不知道如何实现，后面的解决死路是利用class=”light“这个类标注来标注某个圆点是否正在展示图片，并在css样式表中对正在展示图片的原点的颜色改成绿色。鼠标悬停改变成红色以及两个箭头位置鼠标悬停背景变成灰白这一功能的实现是通过hover伪类实现的。
+遇到的困难有：下列索引的颜色显示功能一开始不知道如何实现，后面的解决思路是利用class=”light“这个类标注来标注某个圆点是否正在展示图片，并在css样式表中对正在展示图片的原点的颜色改成绿色。鼠标悬停改变成红色以及两个箭头位置鼠标悬停背景变成灰白这一功能的实现是通过hover伪类实现的。
 
 ### 七月二十三日
 
